--- a/styles.css
+++ b/styles.css
@@ -81,6 +81,7 @@ button i {
 }
 
 .topnav {
+  margin-top: 20px;
   display: flex;
   justify-content: space-between;
   align-items: flex-end;
@@ -261,6 +262,10 @@ article {
   margin: 80px 20px 35px 20px;
 }
 
+.logo-large-container {
+  text-align: left;
+}
+
 .more-links {
   list-style-type: none;
   margin: 40px 0 0 20px;
@@ -287,4 +292,111 @@ article {
 
 footer {
   padding-top: 100px;
+}
+
+@media only screen and (min-width: 750px) {
+  .container {
+    width: 750px;
+  }
+
+  .intro {
+    margin: auto;
+    width: 50%;
+  }
+
+  .sections-container {
+    margin-top: 100px;
+    width: 750px;
+    display: flex;
+    flex-wrap: wrap;
+  }
+
+  .sections-container section {
+    width: 50%;
+    padding: 30px;
+    box-sizing: border-box;
+  }
+
+  .productivity {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+  }
+
+  .productivity img {
+    width: 45%;
+    margin-right: 40px;
+  }
+
+  .testimonials {
+    margin-top: 0;
+    display: flex;
+    justify-content: space-between;
+  }
+
+  .testimonials article {
+    margin: 0 10px 0 10px;
+    width: 33%;
+  }
+
+  .early-access {
+    width: 70%;
+    margin: 200px auto 0 auto;
+  }
+
+  .early-access form {
+    display: flex;
+    margin-top: 20px;
+  }
+
+  .early-access input,
+  .early-access button {
+    margin: 0;
+  }
+
+  .early-access input {
+    width: 70%;
+  }
+
+  .early-access button.call-to-action-primary {
+    margin-left: 30px;
+    padding: 0;
+    width: 40%;
+  }
+
+  .additional-info {
+    width: 100%;
+    display: flex;
+    font-size: 0.7em;
+    justify-content: space-between;
+  }
+
+  .contact {
+    display: flex;
+    justify-content: space-between;
+    width: 60%;
+  }
+
+  .contact .location {
+    width: 70%;
+  }
+
+  .contact > div {
+    flex-grow: 0;
+    padding: 20px;
+    margin: 0;
+    width: 30%;
+  }
+
+  .more-links {
+    width: 10;
+    margin: 20px 0 0 -20px;
+  }
+
+  .social {
+    width: 10%;
+    align-self: flex-start;
+    margin: 0;
+    padding: 10px 0;
+  }
 }
